syntax = "proto3";

package pb;
option go_package="/pb";

service EmailService {
    rpc SendVerificationEmail(EmailData) returns (Msg) {}
    rpc SendResetPasswordEmail(EmailData) returns (Msg) {}
}

message EmailData {
    string email = 1;
    string name = 2;
    string code = 3;
}

message Msg {
    string error = 1;
}

